[gd_scene load_steps=5 format=3 uid="uid://b3sw25dinxbc5"]

[ext_resource type="Script" path="res://UI/Lobby/LobbyManagerUI/lobby_manager_ui.gd" id="1_t3gre"]
[ext_resource type="PackedScene" uid="uid://davfsrqib78ae" path="res://3D/Maps/Map1/map_1.tscn" id="3_7n3oi"]
[ext_resource type="PackedScene" path="res://3D/Maps/Map2/map_2.tscn" id="4_0u71p"]
[ext_resource type="PackedScene" uid="uid://1mt36r6kfk52" path="res://UI/Chat/Chat.tscn" id="5_owj8s"]

[node name="LobbyManagerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t3gre")
map_packed_scenes = Array[PackedScene]([ExtResource("3_7n3oi"), ExtResource("4_0u71p")])

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Lobby" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Lobby"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Host_Join" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join"]
layout_mode = 2

[node name="Host" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer"]
layout_mode = 2

[node name="HostGame" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Host Game"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MarginContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="HostPlayerName" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HostPlayerNameLabel" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostPlayerName"]
layout_mode = 2
text = "Player Name:"

[node name="HostPlayerNameInput" type="LineEdit" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostPlayerName"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="HostButtonFields" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields"]
layout_mode = 2

[node name="UPnPButton" type="Button" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Setup UPnP"

[node name="ExternalIP" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExternalIPLabel" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/HBoxContainer/ExternalIP"]
layout_mode = 2
text = "External IP:"

[node name="ExternalIPInput" type="LineEdit" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/HBoxContainer/ExternalIP"]
layout_mode = 2
editable = false

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields"]
layout_mode = 2

[node name="PortNumber" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PortNumberLabel" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/HBoxContainer3/PortNumber"]
layout_mode = 2
text = "Port Number:"

[node name="PortNumberInput" type="LineEdit" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/HBoxContainer3/PortNumber"]
layout_mode = 2
size_flags_horizontal = 3
text = "1111"

[node name="HostButton" type="Button" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields"]
layout_mode = 2

[node name="SelectMap" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SelectMapLabel" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/HBoxContainer2/SelectMap"]
layout_mode = 2
text = "Select Map:"

[node name="SelectMapInput" type="OptionButton" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/HBoxContainer2/SelectMap"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true

[node name="StartGameButton" type="Button" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Start Game"

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 50

[node name="Join" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer"]
layout_mode = 2

[node name="JoinExistingGame" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Join A Game"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MarginContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="PlayerName" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerNameLabel" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/PlayerName"]
layout_mode = 2
text = "Player Name:"

[node name="PlayerNameInput" type="LineEdit" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/PlayerName"]
layout_mode = 2
theme_override_constants/minimum_character_width = 20
text = "Player 1"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="IPAddressFields" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0

[node name="IPAddressLabel" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer2/IPAddressFields"]
layout_mode = 2
text = "IP Address:"

[node name="IPAddressInput" type="LineEdit" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer2/IPAddressFields"]
layout_mode = 2
theme_override_constants/minimum_character_width = 20
text = "localhost"

[node name="JoinPortNumberFields" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer2"]
layout_mode = 2

[node name="JoinPortNumberLabel" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer2/JoinPortNumberFields"]
layout_mode = 2
text = "Port Number"

[node name="JoinPortNumberInput" type="LineEdit" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer2/JoinPortNumberFields"]
layout_mode = 2
theme_override_constants/minimum_character_width = 20
text = "1111"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="JoinButtonFields" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="JoinButton" type="Button" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/JoinButtonFields"]
layout_mode = 2
size_flags_vertical = 3
text = "Join"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.53

[node name="PanelContainer" type="PanelContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Players List"
horizontal_alignment = 1

[node name="PlayersList" type="ItemList" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 360)
layout_mode = 2
size_flags_vertical = 3
select_mode = 1

[node name="Chat" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_owj8s")]
layout_mode = 2

[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/HBoxContainer/UPnPButton" to="." method="_on_u_pn_p_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/HBoxContainer3/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="item_selected" from="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/HBoxContainer2/SelectMap/SelectMapInput" to="." method="_on_select_map_input_item_selected"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Host/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HostButtonFields/HBoxContainer2/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Host_Join/VBoxContainer/Join/PanelContainer/VBoxContainer/MarginContainer2/MarginContainer/HBoxContainer/JoinButtonFields/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="SendMessage" from="Panel/VBoxContainer/MarginContainer/VBoxContainer/Chat" to="." method="_on_chat_send_message"]
